# rust-fv

./: .gitattributes  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  MISSING-FEATURES-REPORT.md  PROGRESS.md  README.md  TOOLCHAIN.md  default_11298528234189118257_0_97287.profraw  default_11298528234189118257_0_97896.profraw  librust_out.rlib  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v0.1-MILESTONE-AUDIT.md  v0.4-MILESTONE-AUDIT.md  v0.6-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: cicd-aggregate-encoding-z3.md  cicd-macos-windows-support.md  cicd-pipeline-failures.md  cicd-version-tag-workflow.md  cross-verification-support-scope.md  readme-accuracy-audit.md
.planning/debug/resolved/: cicd-pipeline-failures.md  cicd-version-tag-workflow.md  readme-accuracy-audit.md  rust-smt-feature-coverage-gaps.md  term-app-declare-fun-z3-encoding.md  timeout-with-short-limit-hanging.md
.planning/milestones/: v0.1-MILESTONE-AUDIT.md  v0.1-REQUIREMENTS.md  v0.1-ROADMAP.md  v0.2-REQUIREMENTS.md  v0.2-ROADMAP.md  v0.3-REQUIREMENTS.md  v0.3-ROADMAP.md  v0.4-REQUIREMENTS.md  v0.5-REQUIREMENTS.md  v0.5-ROADMAP.md  v0.6-REQUIREMENTS.md  v0.6-ROADMAP.md  v0.7-MILESTONE-AUDIT.md  v0.7-ROADMAP.md  vAll-CROSS-MILESTONE-AUDIT.md
.planning/phases/00-milestone-uat/: 00-01-PLAN.md  00-01-SUMMARY.md  00-CONTEXT.md  00-RESEARCH.md  00-VERIFICATION.md  milestone-UAT.md  v0.3-UAT.md  v0.4-v0.5-UAT.md
.planning/phases/01-soundness-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  VERIFICATION.md
.planning/phases/02-table-stakes-completion/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/analysis/: Cargo.toml
crates/analysis/benches/: stress_bench.rs  vcgen_bench.rs
crates/analysis/src/: async_vcgen.rs  behavioral_subtyping.rs  borrow_conflict.rs  bv2int.rs  call_graph.rs  closure_analysis.rs  contract_db.rs  defunctionalize.rs  differential.rs  encode_prophecy.rs  encode_quantifier.rs  encode_sort.rs  encode_term.rs  float_verification.rs  for_loop_vcgen.rs  ghost_predicate_db.rs  heap_model.rs  hof_vcgen.rs  ir.rs  lib.rs  lifetime_analysis.rs  monomorphize.rs  ownership.rs  recursion.rs  sep_logic.rs  simplify.rs  spec_parser.rs  trait_analysis.rs  trigger_validation.rs  unsafe_analysis.rs  vcgen.rs
crates/analysis/src/concurrency/: channel_verification.rs  deadlock_detection.rs  happens_before.rs  lock_invariants.rs  mod.rs  rc11.rs  thread_encoding.rs
crates/analysis/src/stdlib_contracts/: from.rs  hashmap.rs  iterator.rs  loader.rs  mem.rs  mod.rs  option.rs  override_check.rs  ptr.rs  result.rs  string.rs  types.rs  vec.rs
crates/analysis/tests/: aggregate_encoding.rs  assertion_panic_tests.rs  async_verification.rs  async_w080_test.rs  borrow_splitting_tests.rs  cast_kind_tests.rs  catch_unwind_tests.rs  closure_verification.rs  completeness_suite.rs  concurrency_verification.rs  const_generic_tests.rs  drop_order_tests.rs  e2e_stdlib.rs  e2e_verification.rs  ffi_opaque_test.rs  float_verification.rs  from_question_mark_test.rs  gat_tests.rs  generics_e2e.rs  hof_closures.rs  hrtb_tests.rs  impl_trait_tests.rs  interprocedural_tests.rs  iterator_compose_test.rs  lifetime_verification.rs  loop_verification.rs  maybeuninit_test.rs  mem_contracts_test.rs  negative_impl_tests.rs  nonnull_test.rs  oracle_tests.rs  ownership_tests.rs  partial_move_tests.rs  pin_safety_tests.rs  ptr_contracts_test.rs  recursion_verification.rs  refcell_ghost_tests.rs  sep_logic_integration.rs  simplify_tests.rs  soundness_suite.rs  (+24 more)
crates/analysis/tests/oracle/: hashmap_oracle.rs  iterator_oracle.rs  mod.rs  option_result_oracle.rs  vec_oracle.rs
crates/driver/: Cargo.toml
crates/driver/src/: bench_incremental.rs  cache.rs  callbacks.rs  cargo_verify.rs  cex_render.rs  diagnostics.rs  invalidation.rs  json_output.rs  lib.rs  main.rs  mir_converter.rs  output.rs  parallel.rs  rustc_json.rs  types.rs
crates/driver/tests/: alias_precondition_e2e.rs  alignment_e2e.rs  async_cex_e2e.rs  cross_crate_mono_test.rs  e2e_performance.rs  fnmut_closure_e2e.rs  generics_driver_e2e.rs  ghost_predicate_e2e.rs  incremental_correctness.rs  pattern_matching_e2e.rs  set_discriminant_e2e.rs  spec_diagnostic_e2e.rs  two_phase_borrow_e2e.rs  wmm_race_e2e.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros/tests/: basic.rs
crates/smtlib/: Cargo.toml
crates/solver/: Cargo.toml
crates/solver/src/: backend.rs  config.rs  error.rs  lib.rs  model.rs  parser.rs  result.rs  solver.rs  z3_native.rs
crates/solver/tests/: z3_integration.rs  z3_native_test.rs
docs/: 00-SYNTHESIS.md  GIT-HOOKS.md  README.md  bv2int.md  compiler-integration-research.md  formal_verification_research_summary.md  proof-automation-strategies.md  specification-language-research.md
tests/e2e-bench/: Cargo.toml
tests/e2e-bench/src/: lib.rs
vscode-extension/: .gitignore  .vscodeignore  esbuild.js  package-lock.json  package.json
vscode-extension/scripts/: download-z3.sh  package.sh
vscode-extension/src/: config.ts  diagnostics.ts  extension.ts  gutterDecorations.ts  outputPanel.ts  raMode.ts  statusBar.ts  verifier.ts  z3.ts
(+455 files in other folders)
