[workspace]
resolver = "2"
members = [
    "crates/smtlib",
    "crates/macros",
    "crates/solver",
    "crates/analysis",
    "crates/driver",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
authors = ["Alex Fedin <sales@hupyy.com>"]
repository = "https://github.com/o2alexanderfedin/rust-fv"
rust-version = "1.85.0"

[workspace.dependencies]
rust-fv-smtlib = { path = "crates/smtlib" }
rust-fv-macros = { path = "crates/macros" }
rust-fv-solver = { path = "crates/solver" }
rust-fv-analysis = { path = "crates/analysis" }
z3 = { version = "0.19" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
chrono = "0.4"
libc = "0.2"
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
