[package]
name = "rust-fv-analysis"
description = "MIR analysis and verification condition generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rust-fv-smtlib = { workspace = true }

[dev-dependencies]
rust-fv-solver = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vcgen_bench"
harness = false
