[package]
name = "rust-fv-analysis"
description = "MIR analysis and verification condition generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
petgraph = "0.8"
rust-fv-smtlib = { workspace = true }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
tracing = { workspace = true }

[dev-dependencies]
rust-fv-solver = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"

[[bench]]
name = "vcgen_bench"
harness = false

[[bench]]
name = "stress_bench"
harness = false
