[package]
name = "rust-fv-macros"
description = "Procedural macros for Rust formal verification annotations"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "printing"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
