[package]
name = "rust-fv-solver"
description = "SMT solver interface for Rust formal verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rust-fv-smtlib = { workspace = true }
z3 = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
default = ["z3-native"]
z3-native = ["z3"]

[dev-dependencies]
