[package]
name = "rust-fv-solver"
description = "SMT solver interface for Rust formal verification"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
rust-fv-smtlib = { workspace = true }
z3 = { workspace = true, optional = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[features]
default = ["z3-native"]
z3-native = ["z3"]

[dev-dependencies]
